// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiPageSideBar is rendered 1`] = `
<div
  aria-label="aria-label"
  class="ouiPageSideBar testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`OuiPageSideBar paddingSize l is rendered 1`] = `
<div
  class="ouiPageSideBar ouiPageSideBar--paddingLarge"
/>
`;

exports[`OuiPageSideBar paddingSize m is rendered 1`] = `
<div
  class="ouiPageSideBar ouiPageSideBar--paddingMedium"
/>
`;

exports[`OuiPageSideBar paddingSize none is rendered 1`] = `
<div
  class="ouiPageSideBar"
/>
`;

exports[`OuiPageSideBar paddingSize s is rendered 1`] = `
<div
  class="ouiPageSideBar ouiPageSideBar--paddingSmall"
/>
`;

exports[`OuiPageSideBar sticky is rendered 1`] = `
<div
  class="ouiPageSideBar ouiPageSideBar--sticky"
/>
`;
